# M.I.D.N.I.G.H.T

./: INSTALL.md  README.md  changelog.md
Terminal/: .gitignore  LICENSE  README.md  database.sqlite  main.py  pyproject.toml  requirements.txt
Terminal/docs/: 如何写rotation循环.md
Terminal/notes/: README.md
Terminal/notes/bitblt_multi_monitor_probe/: .gitignore  list_monitors.py  probe_bitblt_multi_monitor.py
Terminal/notes/screen_capture_benchmark/: benchmark_screen_capture.py  screen_capture.py  screen_capture_optimized.py  screen_capture_optimized_small.py  screen_capture_small.py
Terminal/notes/window_capture_benchmark/: .gitignore  benchmark_window_capture.py  capture_screen_region.py  capture_window_region.py
Terminal/terminal/: __init__.py  application.py  embedded_assets.py  keyboard.py
Terminal/terminal/capture/: __init__.py  capture_screen.py  find_template_bounds.py
Terminal/terminal/context/: __init__.py  aura.py  cell.py  context.py  error.py  spell.py  unit.py
Terminal/terminal/pixelcalc/: .gitignore  cell.py  color_map.py  database.sqlite  error.py  extractor.py  matrix.py  title_manager.py
Terminal/terminal/rotation/: DeathKnightBlood.py  DruidGuardian.py  DruidRestoration.py  __init__.py  base.py  hot_reload.py
Terminal/terminal/ui/: main_window.py
Terminal/terminal/ui/dialogs/: __init__.py  (+1 more)
Terminal/terminal/utils/: __init__.py
Terminal/terminal/workers/: __init__.py  capture_worker.py  frame_decode_worker.py  rotation_worker.py
Terminal/tests/: test_extractor.py  test_matrix_decoder.py
Terminal/tests/ui/: test_other_tab.py
(+161 files in other folders)
